deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
