ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
spec:
  tls:
  - hosts:
    - registry.io
    secretName: registryio
  rules:
  - host: "registry.io"
    http:
      paths:
      - pathType: Prefix
        path: "/v2"
        backend:
          service:
            name: registry-service
            port:
              number: 5000
